# project-indexly

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.test  README.md  README_PYPI.md  compose.test.yml  netlify.toml  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.ps1  winget.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci-full.yml  ci-lite.yml  publish.yml  release.yml  tests.yml  verify.yml
Formula/: indexly.rb
assets/scss/: _styles_project.scss  _variables_project.scss
docker/: README.md
docs/: .gitmodules  go.mod  go.sum  package.json  postcss.config.js
docs/_vendor/: modules.txt
docs/archetypes/: default.md
docs/content/: _index.en.md
docs/data/: changelog.json  faq.json
docs/layouts/: index.html
docs/static/: _redirects  releases.json  robots.txt
indexly/: pyvenv.cfg
scripts/: generate_brew_formula.py  generate_releases.py  preflight.sh  prepare_release_notes.py  read_pyproject_version.py  run_indexly.py  update_homebrew_tap.sh
src/indexly/: __init__.py  __main__.py  analysis_orchestrator.py  analysis_result.py  analyze_db.py  analyze_json.py  analyze_utils.py  autodoctor_analyzer.py  autodoctor_db_pipeline.py  autodoctor_detect.py  autodoctor_json_pipeline.py  autodoctor_summary.py  cache_utils.py  clean_csv.py  cli_utils.py  config.py  csv_analyzer.py  csv_pipeline.py  datetime_utils.py  db_pipeline.py  db_update.py  (+45 more)
tests/: __init__.py  conftest.py  helpers.py  sample_timeseries.csv  test_analysis_orchestrator_no_persist.py  test_analytical_backend.py  test_autodoctor_support.py  test_backup_critical_fixes.py  test_boxplot_preprocessor.py  test_boxplot_render_static.py  test_clear_cleaned_data.py  test_compare_module.py  test_csv_observer.py  test_csv_pipeline_regressions.py  test_csv_snapshot_store.py  test_dataset_routing.py  test_db_pipeline_analysis.py  test_debug_tbl.py  test_delete_search.py  test_doctor.py  test_docx_extraction.py  test_email_extraction.py  test_example.py  test_fill_trigger.csv  test_health_event_observer.py  test_ignore_presets.py  test_image_metadata.py  test_infer_boxplot_backend_integration.py  test_inference_engine_regressions.py  test_json_pipeline_ndjson.py  test_large_numeric.json  test_lister_module.py  test_logger_stress.py  test_merge_diagnostics.py  test_mtw_extractor.py  test_observer_runner.py  test_observers_config.py  test_ocr.py  test_organizer_module.py  test_pdf_extraction_cleanup.py  (+7 more)
(+1095 files in other folders)
