[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indexly"
version = "1.0.1"
description = "A local file indexing and search tool with FTS5, regex, and CSV analysis support."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "N. K Franklin-Gent" },
    { name = "OpenAI ChatGPT", email = "support@openai.com" }
]
requires-python = ">=3.8"
keywords = ["indexing", "search", "fts5", "regex", "csv", "asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Database",
    "Topic :: Text Processing :: Indexing"
]

dependencies = [
    "nltk>=3.8.0",
    "pymupdf>=1.23.0",
    "pytesseract>=0.3.13",
    "Pillow>=11.3.0",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "rapidfuzz>=2.16.0",
    "fpdf2>=2.8.3",
    "reportlab>=4.4.2",
    "beautifulsoup4>=4.12.0",
    "extract_msg>=0.25.0",
    "eml-parser>=1.0.7",
    "PyPDF2>=3.0.1",
    "watchdog>=3.0.0",
    "colorama>=0.4.6",
    "python-pptx>=0.6.21",
    "ebooklib>=0.18",
    "odfpy>=1.4.1",
    "rich>=13.7.1"
]

[tool.hatch.envs.dev]
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.6.0"
]

[optional-dependencies]
exiftool = []

[project.urls]
Homepage = "https://github.com/kimsgent/indexly"
Documentation = "https://github.com/kimsgent/indexly#readme"
Source = "https://github.com/kimsgent/indexly"
Issues = "https://github.com/kimsgent/indexly/issues"

[tool.hatch.build]
packages = ["indexly"]

[tool.hatch.build.targets.sdist]
include = [
    "LICENSE.txt",
    "README.md",
    "src/indexly/**",
    "src/indexly/assets/fonts/*.ttf",
    "src/indexly/assets/csv/*.csv"
]

[tool.hatch.build.targets.wheel]
include = [
    "src/indexly/**",
    "README.md",
    "src/indexly/assets/fonts/*.ttf",
    "src/indexly/assets/csv/*.csv"
]

[project.scripts]
indexly = "indexly.__main__:main"
